# esgvoc-integration

./: .pre-commit-config.yaml  README.md  cmor-cvs-table.json  drs-parsing.py  json-schema-generation.py  main.py  print-collections.py  pyproject.toml  requirements-locked.txt  stac-schema.json
