[project]
name = "cmip7-cvs"
version = "0.1.0"
description = "Integration test to show how to access CMIP7 CVs using esgvoc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "esgvoc",
    "icecream>=2.1.7",
    "jupyter-console>=6.6.3",
    "devtools>=0.12.2",
    "pre-commit>=4.3.0",
    "pint>=0.25",
]

[[tool.uv.sources.esgvoc]]
git = "https://github.com/znichollscr/esgf-vocab.git"
rev = "fd9152bcc92b8efb0abf7ba63ff82fa44058e189"
# path = "../esgf-vocab"
# editable = true
